@@ -694,7 +694,7 @@ class BrowserResponse(HTTPResponse):
 
     def _implicitResult(self, body):
         content_type = self.getHeader('content-type')
-        if content_type is None:
+        if content_type is None and self._status != 304:
             if isHTML(body):
                 content_type = 'text/html'
             else:
